# Auto-GPT

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  ai_settings.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1.bug.yml
autogpt/: chat.py  token_counter.py
autogpt/agent/: agent.py  agent_manager.py
autogpt/commands/: web_selenium.py
autogpt/config/: ai_config.py
autogpt/memory/: base.py  local.py
tests/: json_tests.py
